[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Mikołaj Nowak <miknowak@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7.0"
rust_decimal = "1.27.0"
rust_decimal_macros = "1.27.0"
